add: key-manager handler
