# docs/swagger.json
@@ -140,7 +140,7 @@
                 "tags": [
                     "identity"
                 ],
-                "summary": "Run Identity-01-01 (/etc/keystone/keystone.conf)",
+                "summary": "Is user/group ownership of config files set to keystone? (/etc/keystone/keystone.conf)",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -161,6 +161,26 @@
                     "identity"
                 ],
                 "summary": "Run Identity-01-02 (/etc/keystone/keystone-paste.ini)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/checklist.CheckResult"
+                        }
+                    }
+                }
+            }
+        },
+        "/check/key-manager-01-01": {
+            "get": {
+                "description": "Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally, modifies or deletes any of the parameters or the file itself then it would cause severe availability issues resulting in a denial of service to the other end users. User ownership of such critical configuration files must be set to root and group ownership must be set to barbican. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Secrets Management"
+                ],
+                "summary": "Is the ownership of config files set to root/barbican? (/etc/barbican/barbican.conf)",
                 "responses": {
                     "200": {
                         "description": "OK",
